Table description added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,6 +20,7 @@
     </div>
   </div>
   <table class="table table-striped">
+    <caption>Описание таблицы: просто обычный список покупок</caption>
     <thead>
     <tr>
       <th>Предмет</th>
