--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,9 @@
 <div class="page-header">
   <h1> Список покупок </h1>
 </div>
+
+<child-comp></child-comp>
+
 <div class="panel">
   <div class="form-inline">
     <div class="form-group">
